--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <p id="logo">Travel</p>
         <ul>
-            <li><a href = "home.html">Home</a></li>
+            <li><a href = "index.html">Home</a></li>
             <li><a href = "blog.html">Blog</a></li>
             <li><a href = "contact.html">Contact us</a></li>
             <li><a href = "about.html">About us</a></li>
@@ -23,9 +23,10 @@
         <img height="550px" width="100%" src = "images/neom-YeLs9lJDx9M-unsplash.jpg">
         <div class="main_write">
             Feel free to Travel...<br>
-            <button><a href = "contact.html">Click here</a></button>
+            <button><a href = "index.html">Click here</a></button>
         </div>
 
     </main>
+    
 </body>
 </html>
