--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
             </p>
         </div>
     </div>
-    <div style = "color: red; height: 200px;">
-        Hello 
-    </div>
+    <footer>
+        <div>
+            Hello world
+        </div>
+    </footer>
 </body>
 </html>
