--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
                  It brings out new ideas and perspectives, 
                  and travel is important to showcase an actual investment in yourself.
                  Here are the top reasons why traveling is important. In today’s data-driven world, 
-                 the world is (literally) at the tips of our fingers.<button>more</button>
+                 the world is (literally) at the tips of our fingers.
                  
             </p>
+            <button>more</button>
         </div>
         <div class = "two">
             <h3>Why you travel !</h3>
@@ -46,14 +47,52 @@
                  It brings out new ideas and perspectives, 
                  and travel is important to showcase an actual investment in yourself.
                  Here are the top reasons why traveling is important. In today’s data-driven world, 
-                 the world is (literally) at the tips of our fingers.<button>more</button>
+                 the world is (literally) at the tips of our fingers.
                  
             </p>
+            <button>more</button>
         </div>
+    </div>
+    <div id = "ta">
+        <table>
+            <caption><h3>Tourists spot table</h3></caption>
+            <thead>
+                <tr>
+                    <th>Tourist Spot</th>
+                    <th>Value</th>
+                    <th>Days</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Cox's Bazar</td>
+                    <td>20000tk</td>
+                    <td>5 days</td>
+                </tr>
+                <tr>
+                    <td>Cox's Bazar</td>
+                    <td>20000tk</td>
+                    <td>5 days</td>
+                </tr>
+                <tr>
+                    <td>Cox's Bazar</td>
+                    <td>20000tk</td>
+                    <td>5 days</td>
+                </tr>
+                <tr>
+                    <td>Cox's Bazar</td>
+                    <td>20000tk</td>
+                    <td>5 days</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <td colspan="4">Enjoy your days</td>
+            </tfoot>
+        </table>
     </div>
     <footer>
         <div>
-            Hello world
+            <p>@copywrite reserved</p>
         </div>
     </footer>
 </body>
